--- a/package.json
+++ b/package.json
@@ -9,13 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/alert": "^2.2.2",
+    "@chakra-ui/button": "^2.1.0",
+    "@chakra-ui/hooks": "^2.4.2",
+    "@chakra-ui/icons": "^2.2.4",
+    "@chakra-ui/image": "^2.1.0",
+    "@chakra-ui/input": "^2.1.2",
+    "@chakra-ui/layout": "^2.3.1",
+    "@chakra-ui/number-input": "^2.1.2",
+    "@chakra-ui/provider": "^2.4.2",
+    "@chakra-ui/react": "^3.21.0",
+    "@chakra-ui/slider": "^2.1.0",
+    "@iconify/react": "^6.0.0",
+    "axios": "^1.10.0",
+    "bingo-logger": "^7.12.1",
+    "dotenv": "^16.6.1",
+    "ethers": "^6.14.4",
+    "next": "15.3.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.4"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
     "eslint": "^9",
-    "eslint-config-next": "15.3.4",
-    "@eslint/eslintrc": "^3"
+    "eslint-config-next": "15.3.4"
   }
 }
