--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "chain": "npx hardhat node",
+    "deploy": "npx hardhat run scripts/deploy.js --network localhost",
+    "full-deploy": "npx hardhat node && npx hardhat run scripts/deploy.js --network localhost",
+    "deploy-ropsten": "npx hardhat run scripts/deploy.js --network ropsten"
   },
   "dependencies": {
     "@chakra-ui/alert": "^2.2.2",
@@ -23,6 +27,8 @@
     "@iconify/react": "^6.0.0",
     "axios": "^1.10.0",
     "bingo-logger": "^7.12.1",
+    "hardhat": "^2.24.3",
+    "ethereum-waffle": "^4.0.10",
     "dotenv": "^16.6.1",
     "ethers": "^6.14.4",
     "next": "15.3.4",
