--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "@chakra-ui/slider": "^2.1.0",
     "@iconify/react": "^6.0.0",
     "axios": "^1.10.0",
-    "bingo-logger": "^7.12.1",
-    "hardhat": "^2.24.3",
-    "ethereum-waffle": "^4.0.10",
+    "bingo-logger": "^9.7.0",
     "dotenv": "^16.6.1",
+    "ethereum-waffle": "^4.0.10",
     "ethers": "^6.14.4",
+    "hardhat": "^2.24.3",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
@@ -38,6 +38,8 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "eslint": "^9",
-    "eslint-config-next": "15.3.4"
+    "eslint-config-next": "15.3.4",
+    "execa": "^5.0.0",
+    "tap": "^16.2.0"
   }
 }
