--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@chakra-ui/slider": "^2.1.0",
     "@iconify/react": "^6.0.0",
     "axios": "^1.10.0",
-    "bingo-logger": "^9.7.0",
+    "aetherlog": "^9.0.0",
     "dotenv": "^16.6.1",
     "ethereum-waffle": "^4.0.10",
     "ethers": "^6.14.4",
